packages/@winglang/wingc/src/lsp/snapshots/hovers/inside_class_field.snap
---
source: packages/@winglang/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\npreflight my_bucket: class Bucket {\n  addCorsConfiguration(...): void;\n  addFile(...): void;\n  addObject(...): void;\n  onCreate(...): void;\n  onDelete(...): void;\n  onEvent(...): void;\n  /* ... */\n}\n```\n---\nA cloud object store."
range:
  start:
    line: 3
    character: 2
  end:
    line: 3
    character: 11

