packages/@winglang/wingc/src/lsp/snapshots/hovers/inside_class_method.snap
---
source: libs/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\npreflight hello: num\n```"
range:
  start:
    line: 3
    character: 8
  end:
    line: 3
    character: 13

