packages/@winglang/wingc/src/lsp/snapshots/hovers/inside_inflight_test.snap
---
source: libs/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\ninflight a: num\n```"
range:
  start:
    line: 2
    character: 6
  end:
    line: 2
    character: 7

