packages/@winglang/wingc/src/lsp/snapshots/hovers/interface_method_doc.snap
---
source: libs/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\npreflight do(): void\n```\n---\nInterface method doc"
range:
  start:
    line: 3
    character: 4
  end:
    line: 3
    character: 6

