packages/@winglang/wingc/src/lsp/snapshots/hovers/intrinsics.snap
---
source: packages/@winglang/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\nstatic preflight @dirname: str\n```\n---\nGet the normalized absolute path of the current Wing source file's directory.\n\nThe resolved path represents a path during preflight only and is not guaranteed to be valid while inflight."
range:
  start:
    line: 1
    character: 0
  end:
    line: 1
    character: 8

