packages/@winglang/wingc/src/lsp/snapshots/hovers/just_variable.snap
---
source: libs/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\npreflight myString: str\n```"
range:
  start:
    line: 1
    character: 6
  end:
    line: 1
    character: 14

