packages/@winglang/wingc/src/lsp/snapshots/hovers/map_element.snap
---
source: libs/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\npreflight k: str\n```"
range:
  start:
    line: 2
    character: 2
  end:
    line: 2
    character: 3

